2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
 Implement JSON casts for json::array_t and json::object_t.
 Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
 Implement futures with void type for worker and in_proc. We can still wait on them.

2012-07-22  Kirit Saelensminde  <kirit@felspar.com>
 Allow time stamps and time differences to be added and subtracted.

2012-07-21  Kirit Saelensminde  <kirit@felspar.com>
 Made time stamps comparable and also added in a new timediff implementation based on the Boost library version.

2012-07-02  Kirit Saelensminde  <kirit@felspar.com>
 Silenced a clang warning that turns up under some circumstances.

2012-06-30  Kirit Saelensminde  <kirit@felspar.com>
 Added configuration for the log level for the stdout global logger.

2012-05-26  Kirit Saelensminde  <kirit@felspar.com>
 Changed the logging DSL for logging JSON objects thanks to suggestions from jeroen Vermeulen.

2012-04-16  Kirit Saelensminde  <kirit@felspar.com>
 Finally implemented the decode portion of base 64 support.
 Implemented a new logging DSL that makes it much simpler to create JSON objects in the log. Look at fost-base/Cpp/fost-core/log-tests.cpp for an example.

2012-04-08  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up a problem where the crypto++ library wasn't installing properly on Windows.

2012-04-07  Kirit Saelensminde  <kirit@felspar.com>
 Renamed the fostlib::logging namespace to fostlib::log to make it shorter.

2012-03-03  Kirit Saelensminde  <kirit@felspar.com>
 Added coercions from fostlib::utf8_string.to std::vector<unsigned char>.
 Fixed up the JSON and string representations of the timestamps so they are more ISO like and have an explicit UTC time zone.

2012-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Added coercions between fostlib::json and fostlib::jcursor.

2012-02-12  Kirit Saelensminde  <kirit@felspar.com>