@@ -2,6 +2,7 @@
  Implement JSON casts for json::array_t and json::object_t.
  Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
  Implement futures with void type for worker and in_proc. We can still wait on them.
+ Added startswith and endswith members to the string class.
 
 2012-07-22  Kirit Saelensminde  <kirit@felspar.com>
  Allow time stamps and time differences to be added and subtracted.
